--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "kotlin": "^1.3.20",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "body-parser": "^1.15.2",
+    "multer": "^1.4.1"
   }
 }
