--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "kotlin": "^1.3.20",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7",
+    "mongodb": "^3.2.3",
     "body-parser": "^1.15.2",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "send-seekable": "^1.0.4",
+    "express-session": "^1.16.1",
+    "request": "^2.88.0",
+    "mysql": "^2.17.1",
+    "nunjucks": "^3.2.0",
+    "crypto": "^1.0.1"
   }
 }
