--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'kotlin2js' version '1.3.20'
+    id 'kotlin2js' version '1.3.61'
 }
 
 group 'com.rarnu'
-version '1.0-SNAPSHOT'
+version '1.0.1'
 
 repositories {
     mavenCentral()
